Add static route to the application. Add socket.io for realtime update. Add connection and disconnection handlers

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Access2emma",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "socket.io": "^2.0.3"
   }
 }
