--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "test": "export NODE_ENV=test || SET=\"NODE_ENV=test\" && mocha test/**/*.test.js",
+    "test-new": "export NODE_ENV=test || SET=\"NODE_ENV=test\" && mocha test/**/*.test.js",
+    "test": "mocha test/**/*.test.js",
     "test-watch": "nodemon --exec=\"npm test\""
   },
   "engines": {
@@ -19,5 +20,10 @@
   "dependencies": {
     "express": "^4.15.3",
     "socket.io": "^2.0.3"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^3.4.2",
+    "nodemon": "^1.11.0"
   }
 }
