--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Access2emma",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "moment": "^2.18.1",
     "socket.io": "^2.0.3"
